# dp

./: .gitmodules  README.md
01-singleton/: CMakeLists.txt
01-singleton/include/: macro.hh  singleton.hh
01-singleton/src/: singleton.cc
01-singleton/test/: CMakeLists.txt  main.cc
02-prototype/: CMakeLists.txt
02-prototype/include/: bike.hh  garage.hh  macro.hh  prototype.hh
02-prototype/src/: bike.cc  garage.cc  prototype.cc
02-prototype/test/: CMakeLists.txt  main.cc
03-adapter/: CMakeLists.txt
03-adapter/include/: hdmi.hh  macro.hh  vga.hh  videoadapter.hh
03-adapter/src/: hdmi.cc  vga.cc  videoadapter.cc
03-adapter/test/: CMakeLists.txt  main.cc
04-project/: CMakeLists.txt  example_hydro.json  example_meteo.json  wzorce.txt
04-project/include/: agent.hh  commandparser.hh  data.hh  facade.hh  helper.hh  station.hh  types.hh
04-project/src/: CMakeLists.txt  agent.cc  commandparser.cc  data.cc  facade.cc  helper.cc  main.cc  station.cc
